# chess-ai

./: .gitignore  CMakeLists.txt  install_requirements.sh  load_paths.cmd  load_paths.sh  main.cpp
neural_network/: CMakeLists.txt  activation_functions.cpp  main.h  neural_network.cpp  tic_tac_toe.cpp
neural_network/src/: genetic_algorithm.cpp  import_export.cpp  main.h  neural_network.cpp  tic_tac_toe.cpp
src/: activation_functions.cpp  genetic_algorithm.cpp  import_export.cpp  main.h  neural_network.cpp
